[package]
name = "nano-blog-client"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.1"
pulldown-cmark = "0.9.3"
chrono = "0.4.31"
log = "0.4.20"
tokio = { version ="1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json", "multipart", "futures-channel", "blocking"] }
serde_json = { version = "1.0.110", features = [] }
serde = { version = "1.0.194", features = ["derive"] }
rand = { version = "0.8.5", features = [] }
crypto-hash = "0.3.4"